@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixFont.c,v 1.17 2003/02/20 10:23:13 dkf Exp $
+ * RCS: @(#) $Id: tkUnixFont.c,v 1.18 2003/02/25 02:59:27 hobbs Exp $
  */
  
 #include "tkUnixInt.h"
@@ -1357,14 +1357,14 @@ CreateClosestFont(tkwin, faPtr, xaPtr)
 	FontAttributes got;
 	int scalable;
 	unsigned int score;
-	
+
 	if (TkFontParseXLFD(nameList[nameIdx], &got.fa, &got.xa) != TCL_OK) {
 	    continue;
 	}
 	IdentifySymbolEncodings(&got);
 	scalable = (got.fa.size == 0);
 	score = RankAttributes(&want, &got);
-	if (score <= bestScore[scalable]) {
+	if (score < bestScore[scalable]) {
 	    bestIdx[scalable] = nameIdx;
 	    bestScore[scalable] = score;
 	}
@@ -2377,7 +2377,7 @@ CanUseFallback(fontPtr, faceName, ch, fixSubFontPtrPtr)
 
 	scalable = (got.fa.size == 0);
 	score = RankAttributes(&want, &got);
-	if (score <= bestScore[scalable]) {
+	if (score < bestScore[scalable]) {
 	    bestIdx[scalable] = nameIdx;
 	    bestScore[scalable] = score;
 	}
